--- a/.gitconfig
+++ b/.gitconfig
@@ -14,3 +14,8 @@
 	root = ~/src
 [commit]
   template = ~/.gitmessage
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
